fix: add 1rem top padding to main column to align with config column

--- a/www/style.css
+++ b/www/style.css
@@ -770,6 +770,7 @@ pre.code-snippet {
 .main-col {
   flex: 0 0 580px;
   min-width: 0;
+  padding-top: 1rem;
 }
 
 .config-col {
